--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "",
   "main": "./dist/server.js",
   "scripts": {
-    "client:dev": "sh scripts/client.dev.sh",
-    "server:dev": "sh scripts/server.dev.sh",
-    "build": "sh scripts/build.sh"
+    "client:dev": "bash scripts/client-dev.sh",
+    "server:dev": "bash scripts/server-dev.sh",
+    "test": "bash scripts/test.sh",
+    "build": "bash scripts/build.sh"
   },
   "keywords": [],
   "author": {
     "name": "Fouad Kazem"
   },
-  "license": "ISC",
+  "license": "LGPL-3.0-only",
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.12",
@@ -26,8 +28,8 @@
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "nodemon": "^3.0.1",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.1",
@@ -38,6 +40,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
